test/tests/stages/18_structures/valid/params_and_returns/return_pointer_in_rax.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[3]: 
          CMemberDeclaration: 
            TIdentifier: l1
            Long: 
          CMemberDeclaration: 
            TIdentifier: l2
            Long: 
          CMemberDeclaration: 
            TIdentifier: l3
            Long: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: return_in_mem
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: result
                  CCompoundInit: 
                    List[3]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 2
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 3
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 0
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: result
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Structure: 
            TIdentifier: s
            Bool: 0
        None: 
