test/tests/stages/18_structures/invalid_types/extra_credit/union_tag_resolution/distinct_union_types.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: s
                  Bool: 1
                  List[2]: 
                    CMemberDeclaration: 
                      TIdentifier: a
                      Int: 
                    CMemberDeclaration: 
                      TIdentifier: b
                      Long: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: result
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 1
                  None: 
            CS: 
              CReturn: 
                CDot: 
                  TIdentifier: a
                  CVar: 
                    TIdentifier: result
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: s
                  Bool: 1
                  List[0]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: blah
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CFunctionCall: 
                          TIdentifier: foo
                          List[0]: 
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 1
                  None: 
            CS: 
              CReturn: 
                CDot: 
                  TIdentifier: a
                  CVar: 
                    TIdentifier: blah
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
